keyrock-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: fiware
  #annotations:
   # field.cattle.io/creatorId: user-g2sjq
   # field.cattle.io/ipAddresses: "null"
   # field.cattle.io/publicEndpoints: '[{"addresses":["30.0.0.8"],"port":30999,"protocol":"TCP","serviceName":"fiware:keyrock","allNodes":true}]'
   # field.cattle.io/targetDnsRecordIds: "null"
    #field.cattle.io/targetWorkloadIds: '["deployment:fiware:keyrock"]'
  creationTimestamp: null
  labels:
    cattle.io/creator: norman
  name: keyrock
 # namespace: fiware
 # selfLink: /api/v1/namespaces/p-bvfxs-pipeline/services/keyrockserv
spec:
#  externalIPs:
 # - 192.168.100.171
  externalTrafficPolicy: Cluster
  type: NodePort
  ports:
  - name: keyrockport
    port: 3000
    protocol: TCP
    nodePort: 30999
    targetPort: 3000
  selector:
  #  workloadID_keyrockserv: "true"
    name: keyrock
  sessionAffinity: None
status:
  loadBalancer: {}
